--- a/css/index.css
+++ b/css/index.css
@@ -41,7 +41,9 @@
 .top_header{
     width: 100%;
     height:90px;
-    background:#3a2613;
+    background: #ffeeba;
+    position:sticky;
+    box-shadow:whitesmoke 0 4px 4px -2px ;
 }
 
 .fixed{
@@ -81,7 +83,7 @@
 
 .header_list li a{
     text-decoration: none;
-    color: white;
+    color: #3a2613;
     z-index: 1;
 }
 
@@ -92,7 +94,7 @@
     height: 1px;
     bottom: 0;
     left: 0;
-    background: whitesmoke;
+    background:#3a2613;
     visibility: hidden;
     border-radius: 5px;
     transform: scaleX(0);
@@ -357,14 +359,6 @@ padding-top: 150px;
 }
 
 .dot1{
-    height: 30px;
-    width: 30px;
-    background-color:#3a2612;
-    border-radius: 50%;
-    display: inline-block;
-}
-
-.dot2{
     height: 25px;
     width: 25px;
     background-color: #3a2612;
@@ -372,17 +366,25 @@ padding-top: 150px;
     display: inline-block;
 }
 
-.dot3{
+.dot2{
     height: 20px;
     width: 20px;
+    background-color: #3a2612;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.dot3{
+    height: 15px;
+    width: 15px;
     background-color:#3a2612;
     border-radius: 50%;
     display: inline-block;
 }
 
 .dot4{
-    height: 15px;
-    width: 15px;
+    height: 13px;
+    width: 13px;
     background-color:#3a2612;
     border-radius: 50%;
     display: inline-block;
@@ -436,7 +438,7 @@ padding-top: 150px;
 
 .order_table_content1{
     width:630px ;
-    height: 500px;
+    height: 550px;
     display: flex;
     justify-content: space-around;
     padding: 20px;
@@ -549,6 +551,46 @@ padding-top: 150px;
 .about_content_3 img{
     margin: 11px;
 }
+
+.endDots{
+    width: 100%;
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+.end1{
+    height: 20px;
+    width: 20px;
+    background-color:whitesmoke;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.end2{
+    height: 15px;
+    width: 15px;
+    background-color:whitesmoke;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.end3{
+    height: 12px;
+    width: 12px;
+    background-color:whitesmoke;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.end4{
+    height: 11px;
+    width: 11px;
+    background-color:whitesmoke;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+
 /*end..about section*/
 
 
@@ -1275,6 +1317,38 @@ padding-top: 150px;
 
     .home_section{
         height: auto;
+    }
+
+    .dot1{
+        height: 20px;
+        width: 20px;
+        background-color:#3a2612;
+        border-radius: 50%;
+        display: inline-block;
+    }
+
+    .dot2{
+        height: 15px;
+        width: 15px;
+        background-color: #3a2612;
+        border-radius: 50%;
+        display: inline-block;
+    }
+
+    .dot3{
+        height: 12px;
+        width: 12px;
+        background-color:#3a2612;
+        border-radius: 50%;
+        display: inline-block;
+    }
+
+    .dot4{
+        height: 10px;
+        width: 10px;
+        background-color:#3a2612;
+        border-radius: 50%;
+        display: inline-block;
     }
 
 }
